--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   </head>
   <body>
     <div class="page">
-      
+      <img
+        class="logo"
+        src="./images/logo.svg"
+        alt="a square logo, shaped as a blue grid with slightly curved borders and a text line reading 'practicum art gallery'"
+      />
+      <header class="lead">
+        <h1 class="lead__title">From Homeland to Homeland</h1>
+        <p class="lead__subtitle">An epic journey from Kentucky to Burundi through Wales and Ukraine</p>
+        <img src="./images/header-bw-beach.jpg" alt="a black and white image of a beach town on a cloudy day" class="lead__image" />
+      </header>
     </div>
   </body>
 </html>
