add photo-grid section fix intro section margin under 984px

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
           </p>
         </div>
       </section>
+
+      <section class="photo-grid">
+        <ul class="photo-grid__list">
+          <li class="photo-grid__item"><img src="./images/photo-grid-storm.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-sunny-beach.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-sunset-church.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-river-city.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-green-field.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-urban-garden.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-hut.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-mountain-cabins.jpg" alt="" class="photo-grid__image" /></li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
