add photo-grid html elements

--- a/index.html
+++ b/index.html
@@ -39,14 +39,42 @@
 
       <section class="photo-grid">
         <ul class="photo-grid__list">
-          <li class="photo-grid__item"><img src="./images/photo-grid-storm.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-sunny-beach.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-sunset-church.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-river-city.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-green-field.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-urban-garden.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-hut.jpg" alt="" class="photo-grid__image" /></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-mountain-cabins.jpg" alt="" class="photo-grid__image" /></li>
+          <li class="photo-grid__item">
+            <img src="./images/photo-grid-storm.jpg" alt="grey storm clouds above a beach town and mountains" class="photo-grid__image" />
+          </li>
+          <li class="photo-grid__item">
+            <img src="./images/photo-grid-sunny-beach.jpg" alt="a relatively sunny day over a sea side town" class="photo-grid__image" />
+          </li>
+          <li class="photo-grid__item">
+            <img src="./images/photo-grid-sunset-church.jpg" alt="chuch building in an old city with orange sunset sky" class="photo-grid__image" />
+          </li>
+          <li class="photo-grid__item">
+            <img
+              src="./images/photo-grid-river-city.jpg"
+              alt="view of a wide river with a bridge over it leading to a big city"
+              class="photo-grid__image"
+            />
+          </li>
+          <li class="photo-grid__item">
+            <img src="./images/photo-grid-green-field.jpg" alt="large green field near a village town" class="photo-grid__image" />
+          </li>
+          <li class="photo-grid__item">
+            <img src="./images/photo-grid-urban-garden.jpg" alt="small urban garden near a sidewalk in a city" class="photo-grid__image" />
+          </li>
+          <li class="photo-grid__item">
+            <img
+              src="./images/photo-grid-hut.jpg"
+              alt="a person standing in the entrance to a primitive grass roof and wood floor hut"
+              class="photo-grid__image"
+            />
+          </li>
+          <li class="photo-grid__item">
+            <img
+              src="./images/photo-grid-mountain-cabins.jpg"
+              alt="a few cabins in a mountain side village surrounded by a forest and hills"
+              class="photo-grid__image"
+            />
+          </li>
         </ul>
       </section>
     </div>
