--- a/index.html
+++ b/index.html
@@ -77,6 +77,174 @@
           </li>
         </ul>
       </section>
+
+      <section class="places">
+        <ul class="places__list">
+          <li class="place">
+            <h2 class="place__title">
+              Kyiv,
+              <p class="place__country">Ukraine</p>
+            </h2>
+            <div class="place__website">
+              <span class="place__person-role">Artist</span>
+              <div class="place__person-info">Natalia Dolgushina, content producer</div>
+            </div>
+            <div class="place__media-container">
+              <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
+                <div class="place__nft-frame">Buy this artwork as NFT</div>
+              </a>
+            </div>
+            <div class="place__description">
+              <p class="place__paragraph">
+                Kyiv (or Kiev), Ukraine's capital, is a large city located on the shores of the Dnipro river. Of course, no one in their right mind
+                would swim in the river, unless they grew up here, in which case they've probably tried it at some point. Summers are hot here, and
+                the winters are drafty, but the fall and the spring are are absolutely amazing.
+              </p>
+              <p class="place__paragraph">
+                The city itself is a mix of pre-revolution, post-war and soviet architecture, all of it sprinkled with modified balconies. If you're
+                on the right bank of the Dnipro, the landscape is difficult to traverse for people on bikes and those wearing heels. The left bank is
+                considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.
+              </p>
+            </div>
+          </li>
+          <li class="place">
+            <h2 class="place__title">
+              Cricieth,
+              <p class="place__country">Wales</p>
+            </h2>
+            <div class="place__website">
+              <span class="place__person-role">Artist</span>
+              <div class="place__person-info">Steffan Warren, lead editor</div>
+              <div class="place__person-info">Kseniya Glagoleva, project manager</div>
+            </div>
+            <div class="place__media-container">
+              <img
+                src="./images/location-cricieth.jpg"
+                alt="high point of view perspective of a sea side town with green fields and partially cloudy sky"
+                class="place__image"
+              />
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
+                <div class="place__nft-frame">Buy this artwork as NFT</div>
+              </a>
+            </div>
+            <div class="place__description">
+              <p class="place__paragraph">
+                The medieval ruin of Cricieth Castle overlooks the town below from a rock that juts out into the sea. It is thought to have been built
+                by Llewelyn the Great in the 13th century. Some 900 years later, the self-styled Pearl of Wales on the Shores of Snowdonia has become
+                a popular tourist destination during the summer months.
+              </p>
+              <p class="place__paragraph">
+                A short walk down the road from the castle, you can enjoy the world's best ice cream at Cadwalader's, whose secret ingredient is
+                rumored to be locally sourced seaweed. Another claim to fame is the fact that Cricieth won the Wales in Bloom award for five years in
+                a row for its spectacular floral displays around town. It was also home to David Lloyd George, the only Welshman ever to hold the
+                office of Prime Minister of the UK.
+              </p>
+            </div>
+          </li>
+          <li class="place">
+            <h2 class="place__title">
+              Berea,
+              <p class="place__country">USA</p>
+            </h2>
+            <div class="place__website">
+              <span class="place__person-role">Artist</span>
+              <div class="place__person-info">Travis Turner, author and editor</div>
+            </div>
+            <div class="place__media-container">
+              <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
+              <a href="" class="place__nft-link"><div class="place__nft-frame">Buy this artwork as NFT</div></a>
+            </div>
+            <div class="place__description">
+              <p class="place__paragraph">
+                Berea is a small town located in the central part of Kentucky. The town is surrounded by beautiful forests and countryside. It's known
+                as the arts and crafts capital of the state, and visitors will find plenty of shopping opportunities: shops with handmade jewelry,
+                candles, wood items, galleries, glass studios, and more. The town holds a yearly festival celebrating "spoonbread", a local dish made
+                with cornbread and served with a wooden spoon.
+              </p>
+              <p class="place__paragraph">
+                However, it's probably known best for the local college. Berea College was founded in 1855 and was the first college in the south to
+                be racially integrated, as well as the first to be coeducational. Somewhat uniquely, it charges no tuition — every student receives a
+                full-tuition scholarship.
+              </p>
+            </div>
+          </li>
+          <li class="place">
+            <h2 class="place__title">
+              Muramvya,
+              <p class="place__country">Burundi</p>
+            </h2>
+            <div class="place__website">
+              <span class="place__person-role">Artist</span>
+              <div class="place__person-info">Grevisse Kenguruka, tech editor</div>
+            </div>
+            <div class="place__media-container">
+              <img
+                src="./images/location-muramvya.jpg"
+                alt="a monument of a person standing and spreading his arms with signs saying ubumwe"
+                class="place__image"
+              />
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link"
+                ><div class="place__nft-frame">Buy this artwork as NFT</div>
+              </a>
+            </div>
+            <div class="place__description">
+              <p class="place__paragraph">
+                Muramvya is one of the 18 provinces of Burundi. In the kingdom era, Muramvya was the royal capital and in 2007, because of its
+                cultural and natural landscape, it was added to the UNESCO World Heritage Tentative List. It is located in the center of Burundi,
+                between the country's political and economic capitals
+              </p>
+              <p class="place__paragraph">
+                The weather is rather chilly at night, but during the day, you would think you're in heaven. At 2,665 meters (8,743 ft) above sea
+                level, Mount Teza is one of the coldest places in the province. But that cool breeze allows for one of the largest plantations of tea
+                and coffee in the country, which make up the bulk of Burundi's exports.
+              </p>
+              <p class="place__paragraph">
+                The Kibira National Park, one of the largest wildlife reserves for apes, overlaps four provinces, including Muramvya. This National
+                Park lies at the apex of the beautiful mountains of the Congo-Nile Divide, ranging between 1550 and 2660 meters of altitude. It is
+                filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.
+              </p>
+            </div>
+          </li>
+          <li class="place">
+            <h2 class="place__title">
+              Jerusalem,
+              <p class="place__country">Israel</p>
+            </h2>
+            <div class="place__website">
+              <span class="place__person-role">Artist</span>
+              <div class="place__person-info">Omri Ruvio, cyber security</div>
+            </div>
+            <div class="place__media-container">
+              <img
+                src="./images/location-jerusalem.jpg"
+                alt="people walking in the vibrant market of mahne yehuda in jerusalem"
+                class="place__image"
+              />
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link"
+                ><div class="place__nft-frame">Buy this artwork as NFT</div>
+              </a>
+            </div>
+            <div class="place__description">
+              <p class="place__paragraph">
+                Jerusalem is a city in Western Asia, on a plateau in the Judaean Mountains between the Mediterranean and the Dead Sea. It is one of
+                the oldest cities in the world, and is considered holy to the three major Abrahamic religions—Judaism, Christianity, and Islam.
+              </p>
+              <p class="place__paragraph">
+                Jerusalem is situated on the southern spur of a plateau in the Judaean Mountains, which include the Mount of Olives (East) and Mount
+                Scopus (North East). The elevation of the Old City is approximately 760 m (2,490 ft). The whole of Jerusalem is surrounded by valleys
+                and dry riverbeds (wadis). The Kidron, Hinnom, and Tyropoeon Valleys intersect in an area just south of the Old City of Jerusalem.
+              </p>
+              <p class="place__paragraph">
+                For a city located in a desert area, the City of Jerusalem prides itself in quite some greenery. There are more than 1,500 public
+                parks and gardens in Jerusalem. One can see flora and fauna, as well as just enjoy the greenery in them. The City of Jerusalem boasts
+                more than 60 museums! That sounds like a whole months’ plan should you be a visitor there. There are Art museums, Science museums,
+                history museums and many others.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
