remove irelevant div from nft link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="place__media-container">
               <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
               <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                <div class="place__nft-frame">Buy this artwork as NFT</div>
+                Buy this artwork as NFT
               </a>
             </div>
             <div class="place__description">
@@ -125,7 +125,7 @@
                 class="place__image"
               />
               <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                <div class="place__nft-frame">Buy this artwork as NFT</div>
+                Buy this artwork as NFT
               </a>
             </div>
             <div class="place__description">
@@ -153,7 +153,7 @@
             </div>
             <div class="place__media-container">
               <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
-              <a href="" class="place__nft-link"><div class="place__nft-frame">Buy this artwork as NFT</div></a>
+              <a href="" class="place__nft-link">Buy this artwork as NFT</a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -184,8 +184,8 @@
                 alt="a monument of a person standing and spreading his arms with signs saying ubumwe"
                 class="place__image"
               />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link"
-                ><div class="place__nft-frame">Buy this artwork as NFT</div>
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
+                Buy this artwork as NFT
               </a>
             </div>
             <div class="place__description">
@@ -221,8 +221,8 @@
                 alt="people walking in the vibrant market of mahne yehuda in jerusalem"
                 class="place__image"
               />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link"
-                ><div class="place__nft-frame">Buy this artwork as NFT</div>
+              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
+                Buy this artwork as NFT
               </a>
             </div>
             <div class="place__description">
