fix media queries for all sections fix content spill at some resolutions correct styling across all sections

--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
             </div>
             <div class="place__description">
               <p class="place__paragraph">
-                Jerusalem is a city in Western Asia, on a plateau in the Judaean Mountains between the Mediterranean and the Dead Sea. It is one of
-                the oldest cities in the world, and is considered holy to the three major Abrahamic religions—Judaism, Christianity, and Islam.
+                Jerusalem is the capital of Israel. It is a city in Western Asia, on a plateau in the Judaean Mountains between the Mediterranean and
+                the Dead Sea. It is one of the oldest cities in the world, and is considered holy to the three major Abrahamic religions—Judaism,
+                Christianity, and Islam.
               </p>
               <p class="place__paragraph">
                 Jerusalem is situated on the southern spur of a plateau in the Judaean Mountains, which include the Mount of Olives (East) and Mount
