add cover structure change buy link in places position change places grid structure

--- a/index.html
+++ b/index.html
@@ -91,9 +91,6 @@
             </div>
             <div class="place__media-container">
               <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                Buy this artwork as NFT
-              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -107,6 +104,13 @@
                 considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.
               </p>
             </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="buy-button buy-button_place_places"
+              target="_blank"
+            >
+              Buy this artwork as NFT
+            </a>
           </li>
           <li class="place">
             <h2 class="place__title">
@@ -124,9 +128,6 @@
                 alt="high point of view perspective of a sea side town with green fields and partially cloudy sky"
                 class="place__image"
               />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                Buy this artwork as NFT
-              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -141,6 +142,13 @@
                 office of Prime Minister of the UK.
               </p>
             </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="buy-button buy-button_place_places"
+              target="_blank"
+            >
+              Buy this artwork as NFT
+            </a>
           </li>
           <li class="place">
             <h2 class="place__title">
@@ -153,7 +161,6 @@
             </div>
             <div class="place__media-container">
               <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
-              <a href="" class="place__nft-link">Buy this artwork as NFT</a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -168,6 +175,12 @@
                 full-tuition scholarship.
               </p>
             </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="buy-button buy-button_place_places"
+              target="_blank"
+              >Buy this artwork as NFT</a
+            >
           </li>
           <li class="place">
             <h2 class="place__title">
@@ -184,9 +197,6 @@
                 alt="a monument of a person standing and spreading his arms with signs saying ubumwe"
                 class="place__image"
               />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                Buy this artwork as NFT
-              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -205,6 +215,13 @@
                 filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.
               </p>
             </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="buy-button buy-button_place_places"
+              target="_blank"
+            >
+              Buy this artwork as NFT
+            </a>
           </li>
           <li class="place">
             <h2 class="place__title">
@@ -221,9 +238,6 @@
                 alt="people walking in the vibrant market of mahne yehuda in jerusalem"
                 class="place__image"
               />
-              <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq" class="place__nft-link">
-                Buy this artwork as NFT
-              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -243,8 +257,26 @@
                 history museums and many others.
               </p>
             </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="buy-button buy-button_place_places"
+              target="_blank"
+            >
+              Buy this artwork as NFT
+            </a>
           </li>
         </ul>
+      </section>
+
+      <section class="cover">
+        <div class="cover__overlay"></div>
+        <h2 class="cover__title">Visit us</h2>
+        <p class="cover__subtitle">
+          Year-round <br />
+          Practicum Art Gallery <br />
+          404 Tim Berners-Lee Ave
+        </p>
+        <a href="" class="buy-button buy-button_place_cover">Buy tickets</a>
       </section>
     </div>
   </body>
