add extra hidden buy button to fix  responsive position

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
             </div>
             <div class="place__media-container">
               <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
+                target="_blank"
+              >
+                Buy this artwork as NFT
+              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -106,7 +113,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -128,6 +135,13 @@
                 alt="high point of view perspective of a sea side town with green fields and partially cloudy sky"
                 class="place__image"
               />
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
+                target="_blank"
+              >
+                Buy this artwork as NFT
+              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -144,7 +158,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -161,6 +175,12 @@
             </div>
             <div class="place__media-container">
               <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
+                target="_blank"
+                >Buy this artwork as NFT</a
+              >
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -177,7 +197,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
               >Buy this artwork as NFT</a
             >
@@ -197,6 +217,13 @@
                 alt="a monument of a person standing and spreading his arms with signs saying ubumwe"
                 class="place__image"
               />
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
+                target="_blank"
+              >
+                Buy this artwork as NFT
+              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -217,7 +244,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -238,6 +265,13 @@
                 alt="people walking in the vibrant market of mahne yehuda in jerusalem"
                 class="place__image"
               />
+              <a
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
+                target="_blank"
+              >
+                Buy this artwork as NFT
+              </a>
             </div>
             <div class="place__description">
               <p class="place__paragraph">
@@ -259,7 +293,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
