--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
         <a href="" class="buy-button buy-button_place_cover">Buy tickets</a>
         <div class="cover__overlay"></div>
       </section>
+
+      <footer class="footer">
+        <small class="footer__copyright">&copy; 2021. Omri Ruvio</small>
+      </footer>
     </div>
   </body>
 </html>
