move hovers to modifiers

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media"
+                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -113,7 +113,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link"
+              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -137,7 +137,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media"
+                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -158,7 +158,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link"
+              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -177,7 +177,7 @@
               <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media"
+                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
                 target="_blank"
                 >Buy this artwork as NFT</a
               >
@@ -197,7 +197,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link"
+              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
               target="_blank"
               >Buy this artwork as NFT</a
             >
@@ -219,7 +219,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media"
+                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -244,7 +244,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link"
+              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -267,7 +267,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media"
+                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -293,7 +293,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link"
+              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -302,14 +302,14 @@
         </ul>
       </section>
 
-      <section class="cover">
+      <section class="cover cover_hover">
         <h2 class="cover__title">Visit us</h2>
         <p class="cover__subtitle">
           Year-round <br />
           Practicum Art Gallery <br />
           404 Tim Berners-Lee Ave
         </p>
-        <a href="" class="buy-button buy-button_place_cover">Buy tickets</a>
+        <a href="" class="buy-button buy-button_place_cover buy-button_hover">Buy tickets</a>
         <div class="cover__overlay"></div>
       </section>
 
