remove BRs in cover subtitle change to 3 paragraphs instead

--- a/index.html
+++ b/index.html
@@ -304,11 +304,9 @@
 
       <section class="cover cover_hover">
         <h2 class="cover__title">Visit us</h2>
-        <p class="cover__subtitle">
-          Year-round <br />
-          Practicum Art Gallery <br />
-          404 Tim Berners-Lee Ave
-        </p>
+        <p class="cover__subtitle">Year-round</p>
+        <p class="cover__subtitle">Practicum Art Gallery</p>
+        <p class="cover__subtitle">404 Tim Berners-Lee Ave</p>
         <a href="" class="buy-button buy-button_place_cover buy-button_hover">Buy tickets</a>
         <div class="cover__overlay"></div>
       </section>
