add meta tags favicon fix readme.md

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Showcasing responsive layout with vanilla HTML and CSS" />
+    <meta name="author" content="Omri Ruvio" />
+    <meta name="keywords" content="HTML, CSS, BEM, Flexbox, Grid, Figma" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <title>Document</title>
+    <title>From Homeland to Homeland</title>
   </head>
   <body>
     <div class="page">
