remove all fixed widths and heights

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <p class="cover__subtitle">Year-round</p>
         <p class="cover__subtitle">Practicum Art Gallery</p>
         <p class="cover__subtitle">404 Tim Berners-Lee Ave</p>
-        <a href="" class="buy-button buy-button_place_cover buy-button_hover">Buy tickets</a>
+        <a href="https://www.practicum100.com/" class="buy-button buy-button_place_cover buy-button_hover" target="_blank">Buy tickets</a>
         <div class="cover__overlay"></div>
       </section>
 
