remove place__country element

--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
       <section class="places">
         <ul class="places__list">
           <li class="place">
-            <h2 class="place__title">
-              Kyiv,
-              <p class="place__country">Ukraine</p>
-            </h2>
+            <h2 class="place__title">Kyiv, Ukraine</h2>
             <div class="place__website">
               <span class="place__person-role">Artist</span>
               <div class="place__person-info">Natalia Dolgushina, content producer</div>
@@ -124,10 +121,7 @@
             </a>
           </li>
           <li class="place">
-            <h2 class="place__title">
-              Cricieth,
-              <p class="place__country">Wales</p>
-            </h2>
+            <h2 class="place__title">Cricieth, Wales</h2>
             <div class="place__website">
               <span class="place__person-role">Artist</span>
               <div class="place__person-info">Steffan Warren, lead editor</div>
@@ -169,10 +163,7 @@
             </a>
           </li>
           <li class="place">
-            <h2 class="place__title">
-              Berea,
-              <p class="place__country">USA</p>
-            </h2>
+            <h2 class="place__title">Berea, USA</h2>
             <div class="place__website">
               <span class="place__person-role">Artist</span>
               <div class="place__person-info">Travis Turner, author and editor</div>
@@ -207,10 +198,7 @@
             >
           </li>
           <li class="place">
-            <h2 class="place__title">
-              Muramvya,
-              <p class="place__country">Burundi</p>
-            </h2>
+            <h2 class="place__title">Muramvya, Burundi</h2>
             <div class="place__website">
               <span class="place__person-role">Artist</span>
               <div class="place__person-info">Grevisse Kenguruka, tech editor</div>
@@ -255,10 +243,7 @@
             </a>
           </li>
           <li class="place">
-            <h2 class="place__title">
-              Jerusalem,
-              <p class="place__country">Israel</p>
-            </h2>
+            <h2 class="place__title">Jerusalem, Israel</h2>
             <div class="place__website">
               <span class="place__person-role">Artist</span>
               <div class="place__person-info">Omri Ruvio, cyber security</div>
