--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <img src="./images/location-kyiv.jpg" alt="view of a city from across a lake with a bridge crossing towards it" class="place__image" />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -114,7 +114,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -135,7 +135,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -156,7 +156,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -172,7 +172,7 @@
               <img src="./images/location-berea.jpg" alt="city street road sorrounded by houses, yards, cars, grass and trees" class="place__image" />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
                 target="_blank"
                 >Buy this artwork as NFT</a
               >
@@ -192,7 +192,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
               >Buy this artwork as NFT</a
             >
@@ -211,7 +211,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -236,7 +236,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -256,7 +256,7 @@
               />
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-media buy-button_hover"
+                class="buy-button buy-button_place_places buy-button_place_places-media"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -282,7 +282,7 @@
             </div>
             <a
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-              class="buy-button buy-button_place_places buy-button_place_places-link buy-button_hover"
+              class="buy-button buy-button_place_places buy-button_place_places-link"
               target="_blank"
             >
               Buy this artwork as NFT
@@ -291,12 +291,12 @@
         </ul>
       </section>
 
-      <section class="cover cover_hover">
+      <section class="cover">
         <h2 class="cover__title">Visit us</h2>
         <p class="cover__subtitle">Year-round</p>
         <p class="cover__subtitle">Practicum Art Gallery</p>
         <p class="cover__subtitle">404 Tim Berners-Lee Ave</p>
-        <a href="https://www.practicum100.com/" class="buy-button buy-button_place_cover buy-button_hover" target="_blank">Buy tickets</a>
+        <a href="https://www.practicum100.com/" class="buy-button buy-button_place_cover" target="_blank">Buy tickets</a>
         <div class="cover__overlay"></div>
       </section>
 
