--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Showcasing responsive layout with vanilla HTML and CSS" />
     <meta name="author" content="Omri Ruvio" />
     <meta name="keywords" content="HTML, CSS, BEM, Flexbox, Grid, Figma" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="./images/favicon.ico" /> -->
     <link rel="stylesheet" href="./pages/index.css" />
     <title>From Homeland to Homeland</title>
   </head>
