remove hidden buy-button link in places change to flexbox and order on 320p

--- a/index.html
+++ b/index.html
@@ -99,13 +99,6 @@
                   alt="view of a city from across a lake with a bridge crossing towards it"
                   class="place__image"
                 />
-                <a
-                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                  class="buy-button buy-button_place_places buy-button_place_places-media"
-                  target="_blank"
-                >
-                  Buy this artwork as NFT
-                </a>
               </div>
               <div class="place__description">
                 <p class="place__paragraph">
@@ -121,7 +114,7 @@
               </div>
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-link"
+                class="buy-button buy-button_place_places"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -140,13 +133,6 @@
                   alt="high point of view perspective of a sea side town with green fields and partially cloudy sky"
                   class="place__image"
                 />
-                <a
-                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                  class="buy-button buy-button_place_places buy-button_place_places-media"
-                  target="_blank"
-                >
-                  Buy this artwork as NFT
-                </a>
               </div>
               <div class="place__description">
                 <p class="place__paragraph">
@@ -163,7 +149,7 @@
               </div>
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-link"
+                class="buy-button buy-button_place_places"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -181,12 +167,6 @@
                   alt="city street road sorrounded by houses, yards, cars, grass and trees"
                   class="place__image"
                 />
-                <a
-                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                  class="buy-button buy-button_place_places buy-button_place_places-media"
-                  target="_blank"
-                  >Buy this artwork as NFT</a
-                >
               </div>
               <div class="place__description">
                 <p class="place__paragraph">
@@ -203,7 +183,7 @@
               </div>
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-link"
+                class="buy-button buy-button_place_places"
                 target="_blank"
                 >Buy this artwork as NFT</a
               >
@@ -220,13 +200,6 @@
                   alt="a monument of a person standing and spreading his arms with signs saying ubumwe"
                   class="place__image"
                 />
-                <a
-                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                  class="buy-button buy-button_place_places buy-button_place_places-media"
-                  target="_blank"
-                >
-                  Buy this artwork as NFT
-                </a>
               </div>
               <div class="place__description">
                 <p class="place__paragraph">
@@ -247,7 +220,7 @@
               </div>
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-link"
+                class="buy-button buy-button_place_places"
                 target="_blank"
               >
                 Buy this artwork as NFT
@@ -265,13 +238,6 @@
                   alt="people walking in the vibrant market of mahne yehuda in jerusalem"
                   class="place__image"
                 />
-                <a
-                  href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                  class="buy-button buy-button_place_places buy-button_place_places-media"
-                  target="_blank"
-                >
-                  Buy this artwork as NFT
-                </a>
               </div>
               <div class="place__description">
                 <p class="place__paragraph">
@@ -294,7 +260,7 @@
               </div>
               <a
                 href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-                class="buy-button buy-button_place_places buy-button_place_places-link"
+                class="buy-button buy-button_place_places"
                 target="_blank"
               >
                 Buy this artwork as NFT
